welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:32: error: not found: value retourn
  retourn
  ^