welcome.lessons.welcome.methods.picture.PictureMono2.scala.code


def faireMotif(){
  avance(2)
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  droite()
  avance()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  gauche()
  
  
}

override def run() {
  for (cpt <- 1 to 3){
    for (cnt1 <- 1 to 4){
      faireMotif()
    }
    avance(6)
  }
  retourn
}